--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,11 @@ nav ul {
     background-color: rgb(96, 117, 125);
 }
 
+body{
+    background-color: #7D745A;
+    position: absolute;
+}
+
 nav li {
     float: left;
 }
@@ -36,19 +41,25 @@ li a:hover {
 }
 
 
-#profile-pic{
-    width: 50%;
-    height: 50%;
+.pic{
+    float: left;
+    width: 30%;
+    height: 30%;
 }
 
-#intro{
-    background-color: #7D745A;
-}
 
-.article{
-    position: absolute;
-    left:52%;
+article{
+    position: relative;
+    width: 95%;
+    left: 2%;
+    right: 8%;
     top: 10%;
+    list-style-type: none;
+}
+
+
+#contact{
+    width: 100%;
 }
 
 #contactdiv{
@@ -64,7 +75,6 @@ input{
 
 form{
     display: inline-block;
-    
 }
 
 textarea{
@@ -74,4 +84,7 @@ textarea{
 
 footer{
     background-color: #7D6C66;
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
 }
